# react-fastapi-chabot-template

./: .gitignore  README.md  docker-compose.yml
src/backend/: Dockerfile  main.py  pyproject.toml
src/frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
src/frontend/public/: index.html
src/frontend/src/: App.js  config.js
src/frontend/src/contexts/: ThemeContext.js
