[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
    "langchain-community>=0.3.7",
]
